--- a/Convivio/src/convivio/Convivio/ClientUI.form
+++ b/Convivio/src/convivio/Convivio/ClientUI.form
@@ -24,57 +24,57 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="titleLabel" alignment="1" pref="400" max="32767" attributes="0"/>
-          <Component id="loginButton" alignment="1" max="32767" attributes="0"/>
-          <Component id="criarUserButton" alignment="1" max="32767" attributes="0"/>
-          <Component id="fecharButton" alignment="1" max="32767" attributes="0"/>
+          <Component id="jLabel1" alignment="0" max="32767" attributes="0"/>
+          <Component id="listConviviosButton" alignment="1" pref="400" max="32767" attributes="0"/>
+          <Component id="inscreverConvButton" alignment="1" max="32767" attributes="0"/>
+          <Component id="logoutButton" alignment="1" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="titleLabel" min="-2" max="-2" attributes="0"/>
+              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="loginButton" min="-2" max="-2" attributes="0"/>
+              <Component id="listConviviosButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="criarUserButton" min="-2" max="-2" attributes="0"/>
+              <Component id="inscreverConvButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="fecharButton" min="-2" max="-2" attributes="0"/>
+              <Component id="logoutButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="titleLabel">
+    <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Conv&#xed;vios do DEI"/>
+        <Property name="text" type="java.lang.String" value="Bem-vindo "/>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="jLabel1.setText(&quot;Welcome &quot;+pessoa.getNome()+&quot;!&quot;);"/>
+      </AuxValues>
     </Component>
-    <Component class="javax.swing.JButton" name="loginButton">
+    <Component class="javax.swing.JButton" name="listConviviosButton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Login"/>
+        <Property name="text" type="java.lang.String" value="Listar conv&#xed;vios inscritos"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="loginButtonActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="listConviviosButtonActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="criarUserButton">
+    <Component class="javax.swing.JButton" name="inscreverConvButton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Criar um novo utilizador"/>
+        <Property name="text" type="java.lang.String" value="Inscrever num conv&#xed;vio"/>
       </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="criarUserButtonActionPerformed"/>
-      </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="fecharButton">
+    <Component class="javax.swing.JButton" name="logoutButton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Fechar"/>
+        <Property name="text" type="java.lang.String" value="Logout"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="fecharButtonActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="logoutButtonActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
