--- a/Convivio/src/convivio/Convivio/NewLocalUI.form
+++ b/Convivio/src/convivio/Convivio/NewLocalUI.form
@@ -26,7 +26,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Component id="titleLabel" max="32767" attributes="0"/>
           <Group type="102" attributes="0">
-              <EmptySpace min="0" pref="27" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="42" max="32767" attributes="0"/>
               <Component id="fraseLabel" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="opcoesUserComboBox" min="-2" pref="206" max="-2" attributes="0"/>
@@ -65,16 +65,17 @@
     <Component class="javax.swing.JLabel" name="titleLabel">
       <Properties>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Criar um novo utilizador"/>
+        <Property name="text" type="java.lang.String" value="Criar um novo local"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JComboBox" name="opcoesUserComboBox">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="3">
-            <StringItem index="0" value="Aluno"/>
-            <StringItem index="1" value="Funcion&#xe1;rio"/>
-            <StringItem index="2" value="Professor"/>
+          <StringArray count="4">
+            <StringItem index="0" value="Bar"/>
+            <StringItem index="1" value="Jardim"/>
+            <StringItem index="2" value="Exposi&#xe7;&#xe3;o"/>
+            <StringItem index="3" value="Area Desportiva"/>
           </StringArray>
         </Property>
       </Properties>
@@ -84,7 +85,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="fraseLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Qual &#xe9; o tipo de utilizador:"/>
+        <Property name="text" type="java.lang.String" value="Qual &#xe9; o tipo de local &#xe9;:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="criarButton">
