--- a/Convivio/src/convivio/Convivio/NewBarUI.form
+++ b/Convivio/src/convivio/Convivio/NewBarUI.form
@@ -193,10 +193,7 @@
     </Component>
     <Component class="javax.swing.JComboBox" name="convivioComboBox">
       <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="0"/>
-        </Property>
-        <Property name="selectedItem" type="java.lang.Object" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection code="new DefaultComboBoxModel(convivios.toArray())" type="code"/>
         </Property>
       </Properties>
